tests/src/frontend/syntax/invalid/missing_semi_before_bang.sk
fun main(): String {
  c = consumed
  // Should get a decent error message here:
  !row = e;
  "FAIL";
}
